build dockerfile for serving components